[gd_scene load_steps=2 format=2]

[ext_resource path="res://Panels/Instantiables/ItemPanel.gd" type="Script" id=1]

[node name="ItemPanel" type="PanelContainer"]
margin_right = 386.0
margin_bottom = 14.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 379.0
margin_bottom = 143.0
rect_clip_content = true

[node name="TimeLabel" type="Label" parent="VBC"]
margin_right = 372.0
margin_bottom = 14.0
mouse_filter = 1
text = "0.0/16.0"
align = 1

[node name="TimeBar" type="ProgressBar" parent="VBC/TimeLabel"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
percent_visible = false

[node name="HBC1" type="HBoxContainer" parent="VBC"]
margin_top = 18.0
margin_right = 372.0
margin_bottom = 32.0

[node name="PersonNameLabel" type="Label" parent="VBC/HBC1"]
margin_right = 110.0
margin_bottom = 14.0
mouse_filter = 1
text = "A Nigerian prince"

[node name="L1" type="Label" parent="VBC/HBC1"]
margin_left = 114.0
margin_right = 168.0
margin_bottom = 14.0
mouse_filter = 1
text = "wants to"

[node name="BuySellLabel" type="Label" parent="VBC/HBC1"]
margin_left = 172.0
margin_right = 195.0
margin_bottom = 14.0
mouse_filter = 1
text = "sell"

[node name="AmountLabel" type="Label" parent="VBC/HBC1"]
margin_left = 199.0
margin_right = 207.0
margin_bottom = 14.0
mouse_filter = 1
text = "3"

[node name="TheirItemNameLabel" type="Label" parent="VBC/HBC1"]
margin_left = 211.0
margin_right = 254.0
margin_bottom = 14.0
mouse_filter = 1
text = "horses"

[node name="L2" type="Label" parent="VBC/HBC1"]
margin_left = 258.0
margin_right = 279.0
margin_bottom = 14.0
mouse_filter = 1
text = "for:"

[node name="HBC2" type="HBoxContainer" parent="VBC"]
margin_top = 36.0
margin_right = 372.0
margin_bottom = 50.0

[node name="L3" type="Label" parent="VBC/HBC2"]
margin_right = 8.0
margin_bottom = 14.0
mouse_filter = 1
text = ">"

[node name="IndividualCostLabel" type="Label" parent="VBC/HBC2"]
margin_left = 12.0
margin_right = 179.0
margin_bottom = 14.0
mouse_filter = 1
text = "$1.00 and 3 balloons each"

[node name="HBC3" type="HBoxContainer" parent="VBC"]
margin_top = 54.0
margin_right = 372.0
margin_bottom = 68.0

[node name="L4" type="Label" parent="VBC/HBC3"]
margin_right = 35.0
margin_bottom = 14.0
mouse_filter = 1
text = "Total:"

[node name="TotalCostLabel" type="Label" parent="VBC/HBC3"]
margin_left = 39.0
margin_right = 172.0
margin_bottom = 14.0
mouse_filter = 1
text = "$3.00 and 9 balloons"

[node name="HBC4" type="HBoxContainer" parent="VBC"]
margin_top = 72.0
margin_right = 372.0
margin_bottom = 86.0

[node name="L5" type="Label" parent="VBC/HBC4"]
margin_right = 57.0
margin_bottom = 14.0
mouse_filter = 1
text = "You have"

[node name="CurrentAmountLabel" type="Label" parent="VBC/HBC4"]
margin_left = 61.0
margin_right = 69.0
margin_bottom = 14.0
mouse_filter = 1
text = "7"

[node name="YourItemNameLabel" type="Label" parent="VBC/HBC4"]
margin_left = 73.0
margin_right = 156.0
margin_bottom = 14.0
mouse_filter = 1
text = "bags of rocks"

[node name="MarginContainer" type="MarginContainer" parent="VBC"]
margin_top = 90.0
margin_right = 372.0
margin_bottom = 110.0

[node name="BuySellButton" type="Button" parent="VBC/MarginContainer"]
margin_left = 154.0
margin_right = 218.0
margin_bottom = 20.0
mouse_filter = 1
size_flags_horizontal = 4
text = "Buy/Sell"

[node name="DismissButton" type="Button" parent="VBC/MarginContainer"]
margin_left = 308.0
margin_right = 372.0
margin_bottom = 20.0
size_flags_horizontal = 8
text = "Dismiss"

[node name="HS" type="HSeparator" parent="VBC"]
margin_top = 114.0
margin_right = 372.0
margin_bottom = 118.0
mouse_filter = 1

[node name="DescriptionLabel" type="Label" parent="VBC"]
margin_top = 122.0
margin_right = 372.0
margin_bottom = 136.0
mouse_filter = 1
text = "Item Description"
autowrap = true
[connection signal="mouse_entered" from="." to="." method="_on_ItemPanel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ItemPanel_mouse_exited"]
[connection signal="pressed" from="VBC/MarginContainer/BuySellButton" to="." method="_on_BuySellButton_pressed"]
[connection signal="pressed" from="VBC/MarginContainer/DismissButton" to="." method="_on_DismissButton_pressed"]
